--- a/src/components/Reusable/Navbar/Navbar.sass
+++ b/src/components/Reusable/Navbar/Navbar.sass
@@ -6,24 +6,22 @@ $light-black: #1D1D1D
 $dark-brown:  #0D0800
 $button-blue: #28A9E5
 $shadow: 5px 5px 100px 0 rgba(0,0,0,0.2)
-// #sidenav-overlay
-//   display: none
-//   opacity: 0
+
 .bm-burger-button
   display: none
-  opacity: 0
-
-  button
-    display: none
-
 .bm-menu
   display: none
 .dropdown-content
   text-shadow: center
+  border: none !important
+  box-shadow: none !important
+  background-color: red
   li
     margin: auto
-    text-shadow: center
+    text-shadow: none
     padding-left: 20px
+    border: none !important
+    box-shadow: none !important
 .navbar-fixed
   z-index: 100
   position: absolute
@@ -188,6 +186,9 @@ $shadow: 5px 5px 100px 0 rgba(0,0,0,0.2)
     width: 100% !important
     text-align: center
     font-size: 2em
+    border: none
+    box-shadow: none
+
     li
 
       width: 100% !important
