--- a/src/components/Routes/EachProject/Plans/Plans.sass
+++ b/src/components/Routes/EachProject/Plans/Plans.sass
@@ -5,6 +5,7 @@
     text-align: center
   .react-tabs
     margin-top: 20px
+
     .react-tabs__tab-list
       display: flex
       overflow-x: scroll
@@ -16,6 +17,7 @@
         //height: 50px
         text-align: center
         padding: 10px
+        cursor: pointer
         &.react-tabs__tab--selected
           border-bottom: 4px solid #CDA036
 
@@ -61,7 +63,8 @@
 
           h3
             font-size: 1.5em
-            font-weight: 500
+            font-weight: 200
+            font-family: 'Oswald', sans-serif
             @media (max-width: 1400px)
               font-size: 1.1em
 
