--- a/src/components/Routes/Home/Header/Header.sass
+++ b/src/components/Routes/Home/Header/Header.sass
@@ -213,8 +213,6 @@
     .button-collapse
       margin-top: -8px
       i
-
-
     .hero-text
       img
         display: block !important
@@ -230,3 +228,16 @@
         margin: 5px
         &::after
           display: none
+@media (min-width: 993px) and (max-width: 1275px)
+  .home-page-header
+    .home-page-nav
+      display: none
+      top: 0
+      width: 100%
+      background-color: #1D1D1D
+      height: 40px
+      left: 0
+      transform: translateX(0)
+      z-index: 10
+      .brand-logo
+        top: -25vh 
