--- a/src/components/Routes/Projects/ProjectsPage/ProjectsPage.css
+++ b/src/components/Routes/Projects/ProjectsPage/ProjectsPage.css
@@ -125,7 +125,10 @@
           .projects-page .container .row .projectsPage-wrapper .wrapper .project-info .project-info-icons:nth-child(2) {
             border-right: none; }
           .projects-page .container .row .projectsPage-wrapper .wrapper .project-info .project-info-icons.iconsAr {
-            text-align: right; }
+            text-align: right;
+            border-left: 1px solid rgba(0, 0, 0, 0.2); }
+            .projects-page .container .row .projectsPage-wrapper .wrapper .project-info .project-info-icons.iconsAr:nth-child(2) {
+              border-left: none; }
           .projects-page .container .row .projectsPage-wrapper .wrapper .project-info .project-info-icons.right {
             border-right: none;
             padding-left: 5px; }
