--- a/src/components/Routes/Projects/ProjectsPage/ProjectsPage.sass
+++ b/src/components/Routes/Projects/ProjectsPage/ProjectsPage.sass
@@ -147,6 +147,10 @@
 
               &.iconsAr
                 text-align: right
+                border-left: 1px solid rgba(0,0,0,0.2)
+                &:nth-child(2)
+                  border-left: none
+
               &.right
                 border-right: none
                 padding-left: 5px
