--- a/src/components/Reusable/Getintouch/Getintouch.css
+++ b/src/components/Reusable/Getintouch/Getintouch.css
@@ -1,5 +1,5 @@
 .contact-section {
-  margin-top: 100px;
+  margin-top: 10px;
   width: 100%;
   height: 800px;
   position: relative; }
@@ -57,7 +57,6 @@
           .contact-section .contact-social .contact-social-icons a i:hover.linkedin {
             color: #1b95e0; }
   .contact-section .contact-input {
-    position: absolute;
     height: 680px;
     background-color: #222222;
     z-index: 10;
@@ -66,7 +65,6 @@
     color: #fff;
     box-sizing: border-box;
     border: 20px solid #222222;
-    transform: translateX(90.8px);
     box-shadow: 5px 5px 100px 0 rgba(0, 0, 0, 0.2); }
     .contact-section .contact-input h5 {
       font-weight: 100;
@@ -87,7 +85,6 @@
         letter-spacing: 0;
         font-family: "JFLight", sans-serif; }
     .contact-section .contact-input form {
-      margin-top: 20px;
       text-align: center; }
       .contact-section .contact-input form .input-field {
         width: 90%;
@@ -140,7 +137,8 @@
         text-align: left !important;
         direction: ltr;
         margin-top: 20px !important;
-        width: 95%; }
+        width: 95%;
+        z-index: 200; }
         .contact-section .contact-input form .react-tel-input.inputAr {
           transform: translateX(-25px); }
         .contact-section .contact-input form .react-tel-input input {
@@ -215,7 +213,7 @@
 
 @media (max-width: 992px) {
   .contact-section {
-    margin-top: 100px;
+    margin-top: 20px;
     height: 770px !important; }
     .contact-section h1 {
       padding-top: 0;
@@ -254,29 +252,23 @@
     .contact-section .map {
       display: none !important; } }
 @media (min-width: 993px) and (max-width: 1200px) {
-  .contact-input {
-    transform: translateX(60.8px) !important; }
-    .contact-input form #demo {
-      position: relative;
-      left: 0;
-      width: 100% !important; }
-    .contact-input form .intl-tel-input {
-      transform: translateX(-20px) !important;
-      position: relative !important;
-      left: 0 !important; } }
-@media (min-width: 1201px) and (max-width: 1400px) {
-  .contact-input {
-    transform: translateX(70.8px) !important; } }
+  .contact-input form #demo {
+    position: relative;
+    left: 0;
+    width: 100% !important; }
+  .contact-input form .intl-tel-input {
+    transform: translateX(-20px) !important;
+    position: relative !important;
+    left: 0 !important; } }
 @media (min-width: 1401px) and (max-width: 2000px) {
-  .contact-section .contact-input {
-    transform: translateX(100px) !important; }
-    .contact-section .contact-input form #demo {
-      position: relative;
-      left: 0;
-      width: 230% !important; }
-    .contact-section .contact-input form .intl-tel-input {
-      transform: translateX(-150px) !important;
-      position: relative !important;
-      left: 0 !important; } }
+  .contact-section .contact-input form #demo {
+    position: relative;
+    left: 0;
+    width: 230% !important; }
+  .contact-section .contact-input form .intl-tel-input {
+    left: 0;
+    transform: translateX(-300px) !important;
+    position: relative !important;
+    left: 0 !important; } }
 
 /*# sourceMappingURL=Getintouch.css.map */
