--- a/src/components/Reusable/Getintouch/Getintouch.sass
+++ b/src/components/Reusable/Getintouch/Getintouch.sass
@@ -1,6 +1,6 @@
 
 .contact-section
-  margin-top: 100px
+  margin-top: 10px
   width: 100%
   height: 800px
   //text-align: center
@@ -68,7 +68,7 @@
 
   .contact-input
     // display: none
-    position: absolute
+    // position: absolute
     height: 680px
     //top: 20%
     background-color: #222222
@@ -79,7 +79,7 @@
     color: #fff
     box-sizing: border-box
     border: 20px solid #222222
-    transform: translateX(90.8px)
+    // transform: translateX(90.8px)
     box-shadow: 5px 5px 100px 0 rgba(0,0,0,0.2)
 
     h5
@@ -102,7 +102,7 @@
         font-family: 'JFLight', sans-serif
 
     form
-      margin-top: 20px
+      //margin-top: 20px
       text-align: center
 
       .input-field
@@ -165,6 +165,7 @@
         direction: ltr
         margin-top: 20px !important
         width: 95%
+        z-index: 200
         &.inputAr
 
           transform: translateX(-25px)
@@ -243,7 +244,7 @@
 @media (max-width: 992px)
 
   .contact-section
-    margin-top: 100px
+    margin-top: 20px
     height: 770px !important
     h1
       padding-top: 0
@@ -286,7 +287,7 @@
       display: none !important
 @media (min-width: 993px) and (max-width: 1200px)
   .contact-input
-    transform: translateX(60.8px) !important
+    // transform: translateX(60.8px) !important
     form
       #demo
         position: relative
@@ -298,17 +299,18 @@
         left: 0 !important
 @media (min-width: 1201px) and (max-width: 1400px)
   .contact-input
-    transform: translateX(70.8px) !important
+    // transform: translateX(70.8px) !important
 @media (min-width: 1401px) and (max-width: 2000px)
   .contact-section
     .contact-input
-      transform: translateX(100px) !important
+      //transform: translateX(100px) !important
       form
         #demo
           position: relative
           left: 0
           width: 230% !important
         .intl-tel-input
-          transform: translateX(-150px) !important
+          left: 0
+          transform: translateX(-300px) !important
           position: relative !important
           left: 0 !important
