--- a/src/components/Reusable/ProjectsCarousel/ProjectsCarousel.sass
+++ b/src/components/Reusable/ProjectsCarousel/ProjectsCarousel.sass
@@ -157,8 +157,6 @@
 
               .description
                 position: relative
-
-                // background-color: #fff
                 padding: 10px
                 border-bottom: 1px solid rgba(0,0,0,0.2)
                 box-shadow: 0px #fff
@@ -283,3 +281,8 @@
         .slick-list
           .wrapper
             width: 330px !important
+            .description
+              h5
+                font-size: 1.2em !important
+              h6
+                font-size: 0.9em !important
