--- a/src/components/Routes/EachProject/Location/Location.css
+++ b/src/components/Routes/EachProject/Location/Location.css
@@ -1,6 +1,7 @@
 .location {
   background-color: #222222;
-  margin-top: -2px; }
+  margin-top: -2px;
+  padding-bottom: 100px; }
   .location .tabs {
     background-color: #222222; }
     .location .tabs ul {
@@ -28,9 +29,14 @@
           margin: auto;
           color: #fff; }
   .location .map {
-    width: 100%;
+    margin-top: 40px;
     text-align: center;
     padding: 60px 0;
+    width: 80%;
+    height: 700px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
     background-image: url("https://res.cloudinary.com/cayangroup9292/image/upload/v1522054899/home-page-whyus/photo-tour-bg.jpg");
     background-position: center;
     background-size: cover;
@@ -47,6 +53,9 @@
       height: auto !important;
       width: 100% !important; }
       .location .tabs ul li div {
-        display: none; } }
+        display: none; }
+  .location .map {
+    width: 100%;
+    height: 400px; } }
 
 /*# sourceMappingURL=Location.css.map */
