--- a/src/components/Routes/EachProject/Location/Location.sass
+++ b/src/components/Routes/EachProject/Location/Location.sass
@@ -1,8 +1,7 @@
 .location
   background-color: #222222
   margin-top: -2px
-
-
+  padding-bottom: 100px
   .tabs
     background-color: #222222
     ul
@@ -36,9 +35,16 @@
           margin: auto
           color: #fff
   .map
-    width: 100%
+    margin-top: 40px
     text-align: center
     padding: 60px 0
+    width: 80%
+    height: 700px
+    position: relative
+    left: 50%
+    transform: translateX(-50%)
+    //padding-bottom: 200px
+
     background:
       image: url('https://res.cloudinary.com/cayangroup9292/image/upload/v1522054899/home-page-whyus/photo-tour-bg.jpg')
       position: center
@@ -59,3 +65,6 @@
         li
           div
             display: none
+    .map
+      width: 100%
+      height: 400px
