--- a/src/components/Routes/EachProject/Plans/Plans.css
+++ b/src/components/Routes/EachProject/Plans/Plans.css
@@ -14,7 +14,8 @@
         color: #fff;
         background-color: #222222;
         text-align: center;
-        padding: 10px; }
+        padding: 10px;
+        cursor: pointer; }
         .plans .react-tabs .react-tabs__tab-list li.react-tabs__tab--selected {
           border-bottom: 4px solid #CDA036; }
     .plans .react-tabs .react-tabs__tab-panel {
@@ -55,7 +56,8 @@
           transform: translateX(-50%); }
           .plans .react-tabs .react-tabs__tab-panel .plan-info .price h3, .plans .react-tabs .react-tabs__tab-panel .plan-info .area h3 {
             font-size: 1.5em;
-            font-weight: 500; }
+            font-weight: 200;
+            font-family: "Oswald", sans-serif; }
             @media (max-width: 1400px) {
               .plans .react-tabs .react-tabs__tab-panel .plan-info .price h3, .plans .react-tabs .react-tabs__tab-panel .plan-info .area h3 {
                 font-size: 1.1em; } }
